# borkscreen

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: gateways.rs  lib.rs  list_windows_usecase.rs  main.rs  presenter.rs  results.rs  take_screen_shot_usecase.rs
src/fs/: fake_file_system_adapter.rs  image_module_file_system_adapter.rs  mod.rs
src/presenter_adapter/: mod.rs  plain_text_presenter_adapter.rs  serde_presenter_adapter.rs
src/window_system/: fake_window_system_adapter.rs  mod.rs  x11_dl_window_system_adapter.rs
tests/: list_windows_usecase_test.rs  take_screen_shot_usecase_test.rs  test_util.rs  x11_dl_window_system_adapter_it.rs
