[package]
name = "borkscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "borkscreen"
path = "src/lib.rs"

[[bin]]
name = "borkscreen"
path = "src/main.rs"

[dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
anyhow = "1.0.82"
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.198", features = ["derive"] }

[dev-dependencies]
testcontainers = {  version = "0.19.0", features = ["blocking"] }
image-compare = "0.4.1"